Bug 53560 - [bug] window resize mouse distance incorrect
Summary: [bug] window resize mouse distance incorrect
Status: VERIFIED FIXED
Alias: None
Product: Wayland
Classification: Unclassified
Component: wayland (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Wayland bug list
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-08-15 21:39 UTC by Brian Lovin
Modified: 2012-11-27 23:09 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
Example video (143.07 KB, video/webm)
2012-08-15 21:39 UTC, Brian Lovin
Details

Description Brian Lovin 2012-08-15 21:39:41 UTC
Created attachment 65621 [details]
Example video

System Environment:
--------------------------
Distro: Ubuntu 12.04
Arch: x86_64
glproto master ec1eec4355ee4a6c5134f2178192f10b6d28a87a
mesa master 538085c5d423df4fed3c3b2c473c3684f7b08db6
wayland master b57694ca0e9dc7d2845ce9fb0ac9c4b0ebc940ce
pixman master 09cb1ae10b1976970233c934d27c36e0a4203e1c
wayland-test master 14cdb54b5f9320aac9dd3c4dfe490952a40b0250
weston master 70fc4a4cd6ebff1125e3f7fd8736b4dafa6c8c76
drm master 3163cfe4db925429760407e77140e2d595338bc2
cairo master 95b7f4fe3a5deea6766538d843c75626e4bb68cf
libX11 master 8042f88ace33573f9d0dfaa21ed54ac7cef266d5
macros master 0890e4003aacfa7113ab3f4e3ad7c5636f8e922a
libxkbcommon master f491285a5f4b5f680a87e9e3076e8499f3ed2a3b
dri2proto master 4eeacce4c4a300b938b7e3fb78a8e443c491780b


Detailed Description:
-----------------------------
Attempting to resize a window by dragging from the bottom of the window left and right runs out of what can be best described as 'resize space' - as if a larger box is created around the window to be resized and if you move the mouse outside that box then resizing of the window stops.

Steps to Reproduce:
----------------------------
1. start weston under X11
2. ./weston-terminal
3. move the window toward the bottom of the screen
4. Resize the window left and right
5. Drag the mouse cursor up toward the top of the window (with the mouse button pressed)
6. Observe at some point above the window the window no longer updates the resizes.
Comment 1 Scott Moreau 2012-08-16 09:33:22 UTC
This seems to fix it here http://lists.freedesktop.org/archives/wayland-devel/2012-August/004947.html
Comment 2 Kristian Høgsberg 2012-08-16 14:35:14 UTC
Author:     Philipp Brüschweiler <blei42@gmail.com>
AuthorDate: Thu Aug 16 10:50:07 2012 +0200
Commit:     Kristian Høgsberg <krh@bitplanet.net>
CommitDate: Thu Aug 16 10:33:56 2012 -0400

    toytoolkit: don't ignore resizes with negative width or height

    E.g. this can happen when you grab the lower right corner of a window
    and move over the top of the window when resizing. In this case, the
    changed width is still important and should be acted upon.

    https://bugs.freedesktop.org/show_bug.cgi?id=53560
Comment 3 Brian Lovin 2012-11-27 23:09:54 UTC
Changing to verified


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.